# przyciski-souls-3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  linux_toolchain.cmake  makefile  win_toolchain.cmake
GL/include/glad/: glad.h
GL/src/: glad.c
assets/shaders/: fragmentShader.glsl  vertexShader.glsl
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
src/elements/: Texture.cpp  Texture.hpp
src/input/: InputHandler.cpp  InputHandler.hpp
src/shaders/: Shader.cpp  Shader.hpp  fragmentShader.frag  vertexShader.vert
src/window/: GameWindow.cpp  GameWindow.hpp  Renderer.cpp  Renderer.hpp
